RESOLVED FIXED299015
Missing header for unified build
https://bugs.webkit.org/show_bug.cgi?id=299015
Summary Missing header for unified build
adrian_taylor
Reported 2025-09-17 05:42:53 PDT
This include is required to be robust to file reorderings during unified builds.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-17 05:44:38 PDT
adrian_taylor
Comment 2 2025-09-17 05:45:55 PDT
Note You need to log in before you can comment on or make changes to this bug.