Missing header for unified build https://bugs.webkit.org/show_bug.cgi?id=299015

Reviewed by Elliott Williams.

Includes an extra header file which is used within this .cpp file. Not
necessary given the current concatenation of files in the unified build, but
causes problems if files are concatenated differently due to other changes.

Canonical link: https://commits.webkit.org/300091@main